@@ -8,7 +8,7 @@ main()
 	char *text="error\n";
 	Numeric *value1, *value2, *res;
 	exec sql begin declare section;
-		decimal(14,7) des = {0, 0, 0, 0, 0, NULL, NULL} ;
+		numeric(14,7) des = {0, 0, 0, 0, 0, NULL, NULL} ;
 	exec sql end declare section;
 	double d;
 	FILE *dbgs;
